--- a/src/index.css
+++ b/src/index.css
@@ -5,5 +5,5 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #ece7ce;
+  background-color: #cfc96c; 
 }
