--- a/src/components/components.styles.css
+++ b/src/components/components.styles.css
@@ -1,7 +1,19 @@
 .home-container {
     height: 100%;
-    width: 60%;
     margin: 0 auto;
+}
+
+@media only screen and (min-width: 768px) {
+    .home-container {
+        width: 75%;
+    }
+}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {
+    .home-container {
+        width: 60%;
+    }
 }
 
 .todo-list-item {
