--- a/src/components/components.styles.css
+++ b/src/components/components.styles.css
@@ -119,7 +119,7 @@
     background-color: #d3b340;
     border: none;
     color: white;
-    padding: 10px 22px;
+    padding: 12px 22px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
@@ -132,7 +132,7 @@
 
 .pagination-cntr .pagination-btn {
     font-size: 16px;
-    padding: 3px 10px;
+    padding: 3px 18px;
     text-align: center;
     border: none;
 }
@@ -141,4 +141,8 @@
     padding: 16px;
     font-size: 18px;
     font-weight: bold; 
+}
+
+.footer-page-info-cntr {
+    text-align: center;
 }
