--- a/src/components/components.styles.css
+++ b/src/components/components.styles.css
@@ -26,6 +26,10 @@
     font-size: 22px;
 }
 
+.todo-list-item.todo-is-done {
+    background-color: #7CFC00;
+}
+
 .footer {
     position: sticky;
     bottom: 3px;
